[package]
name = "thiserror-ext"
description = "Useful extension utilities for `thiserror`."
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
license = { workspace = true }

[dependencies]
thiserror = "1"
thiserror-ext-derive = { version = "=0.2.0", path = "derive" }

[dev-dependencies]
anyhow = "1"
expect-test = "1"
sealed_test = "1"

[features]
backtrace = ["thiserror-ext-derive/backtrace"]

[workspace]
members = ["derive"]
package.version = "0.2.0"
package.edition = "2021"
package.authors = ["Bugen Zhao <i@bugenzhao.com>"]
package.repository = "https://github.com/risingwavelabs/thiserror-ext"
package.keywords = ["error", "error-handling", "derive"]
package.categories = ["rust-patterns"]
package.license = "Apache-2.0"
