[package]
name = "thiserror-ext-derive"
description = "Proc macros of `thiserror-ext`."
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
license = { workspace = true }

[lib]
proc-macro = true

[dependencies]
itertools = "0.12"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
