[package]
name = "thiserror-ext-derive"
description = "Procedural macros for `thiserror_ext`."
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
license = { workspace = true }

[lib]
proc-macro = true

[features]
nightly = []

[dependencies]
either = "1.7"
proc-macro2 = "1"
quote = "1"
syn = "2"
