[package]
name = "no_std_test"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
publish = false

[dependencies]
thiserror-ext = { path = "../", default-features = false }
thiserror = { version = "2", default-features = false }
